--- a/app/src/main/res/layout/activity_dessert_detail.xml
+++ b/app/src/main/res/layout/activity_dessert_detail.xml
@@ -10,7 +10,7 @@
     <ImageView
             android:id="@+id/imageViewDessertDetailActivity"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             tools:src="@drawable/dessert0"
             android:adjustViewBounds="true"
             app:layout_constraintStart_toStartOf="parent"
@@ -21,9 +21,10 @@
     <TextView
             android:id="@+id/textViewTitleDessertDetailActivity"
             android:layout_width="wrap_content"
-            android:layout_height="100dp"
+            android:layout_height="150dp"
             android:layout_margin="8dp"
             android:gravity="center_vertical"
+            android:textStyle="bold"
             android:padding="8dp"
             tools:text="Dessert"
             android:textColor="@android:color/black"
